vite and pakagejson commit

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "click100-gcc",
-  "homepage": "https://PixelAdvant.github.io/Click100 Landing",
+  "homepage": "https://PixelAdvant.github.io/Click100-Landing",
   "private": true,
   "version": "0.0.0",
   "type": "module",
